legacy/test/util/test_case/tree_file/valid/valid_tree.tree
children:
- children: null
  metadata: null
  mtime: null
  name: foo.txt
  size: null
  type: file
- children: []
  metadata: null
  mtime: null
  name: bar
  size: null
  type: directory
mtime: null
name: root
size: null
type: directory
