legacy/test/util/test_case/tree_file/invalid/invalid_missing_metadata.tree
name: root
type: directory
children:
  - name: foo.txt
    type: file 